# fish

./: .env.example  MANUAL.md  docker-compose.yml  fix-codex-powershell-env.cmd  iran_israel_war_impact.md  package-lock.json  package.json
.github/workflows/: docker-image.yml
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  graph.py  invest.py  report.py  simulation.py
backend/app/models/: __init__.py  project.py  task.py
backend/app/services/: __init__.py  document_collector.py  graph_builder.py  investment_ontology.py  investor_personas.py  local_graph.py  local_graph_memory_updater.py  local_search_tools.py  mcp_client.py  mcp_tool_registry.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py
backend/app/utils/: __init__.py  file_parser.py  llm_client.py  locale.py  logger.py  retry.py
backend/scripts/: action_logger.py  check_posts.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
frontend/: index.html  vite.config.js
frontend/src/: App.vue  main.js  theme-bridge.js  theme-dark-overrides.css
frontend/src/api/: graph.js  index.js  report.js  simulation.js
frontend/src/assets/: layout.css
frontend/src/components/: GraphPanel.vue  HistoryDatabase.vue  LanguageSwitcher.vue  Step1GraphBuild.vue  Step1TopicSetup.vue  Step2EnvSetup.vue  (+3 more)
locales/: en.json  ko.json  languages.json
(+10 files in other folders)
